# klu_format

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: before_deploy.sh  script.sh
examples/: extract.rs  r_exists.rs  read.rs  read_file.rs  write.rs
src/: extracts.rs  lib.rs  main.rs  read.rs  tests.rs  types.rs  write.rs
src/cmds/: mod.rs
src/read/: mod.rs  utils.rs
src/write/: mod.rs  utils.rs
test/: archive.klu  in.klu
test/in/: testfile
testsdata/: archive_correct  archive_correct.bak  header_correct  header_wrong  magic_correct
