[package]
name = "klu_core"
version = "0.1.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"
description = "Klu file format core package"
repository = "https://github.com/maix0/klu_format"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
image = "0.22.3"
