[package]
name = "klu_core"
version = "0.2.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"
description = "Klu file format core package"
repository = "https://github.com/maix0/klu_format"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
virtual_fs = []
all = ["virtual_fs"]
